--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "link-shortner",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -10,16 +9,19 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "chai": "^5.1.1",
+    "esm": "^3.2.25",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mocha": "^10.7.0",
     "mongoose": "^8.5.1",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
+    "chai": "^4.5.0",
+    "chai-http": "^4.4.0",
+    "mocha": "^8.3.2",
     "nodemon": "^3.1.4"
   }
 }
